# bombastic-hs

./: Guardfile  LICENSE  Rakefile  bombastic.cabal  stack.yaml
app/: Main.hs
src/: Bombastic.hs  Main.hs
test/: Spec.hs
