name:                bombastic
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/ahri/bombastic#readme
license:             BSD3
license-file:        LICENSE
author:              Adam Piper
maintainer:          adam@ahri.net
copyright:           none
category:            none
build-type:          Simple
cabal-version:       >=1.10

executable bombastic
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
